added methods for memeber operations
